force-app/main/default/objects/KimbleOne__Proposal__c/KimbleOne__Proposal__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Proposal</label>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>