force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__AcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AcceptanceDate__c</fullName>
    <label>Acceptance Date</label>
    <type>Date</type>
</CustomField>