force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__AcceptanceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AcceptanceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acceptance Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ProposalAcceptanceType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>