force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__BusinessUnit__c.KimbleOne__IsOperatingEntity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>