force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractRevenue__c</fullName>
    <formula>IF( KimbleOne__ForecastAtDetailedLevel__c  , KimbleOne__DetailedLevelContractRevenue__c , KimbleOne__HighLevelContractRevenue__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>