force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__DeliveryStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryStartDate__c</fullName>
    <label>Delivery Start Date</label>
    <type>Date</type>
</CustomField>