force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__DetailedLevelContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DetailedLevelContractCost__c</fullName>
    <label>Detailed Level Cost</label>
    <summarizedField>KimbleOne__ProposalItem__c.KimbleOne__DetailedLevelContractCost__c</summarizedField>
    <summaryForeignKey>KimbleOne__ProposalItem__c.KimbleOne__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>