force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__DetailedLevelWeightedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DetailedLevelWeightedContractRevenue__c</fullName>
    <label>Detailed Level Weighted Revenue</label>
    <summarizedField>KimbleOne__ProposalItem__c.KimbleOne__DetailedLevelWeightedContractRevenue__c</summarizedField>
    <summaryForeignKey>KimbleOne__ProposalItem__c.KimbleOne__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>