force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__DiscountScheme__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DiscountScheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Scheme</label>
    <referenceTo>KimbleOne__DiscountScheme__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>