force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ForecastAtDetailedLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastAtDetailedLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecast At Detailed Level</label>
    <type>Checkbox</type>
</CustomField>