force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__HighLevelWeightedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HighLevelWeightedContractRevenue__c</fullName>
    <label>High Level Weighted Revenue</label>
    <summarizedField>KimbleOne__ProposalItem__c.KimbleOne__HighLevelWeightedContractRevenue__c</summarizedField>
    <summaryForeignKey>KimbleOne__ProposalItem__c.KimbleOne__Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>