force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__NumberOfItems__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfItems__c</fullName>
    <label>Number Of Items</label>
    <summaryForeignKey>KimbleOne__ProposalItem__c.KimbleOne__Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>