force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>