force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__Proposal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Proposal</label>
    <referenceTo>KimbleOne__Proposal__c</referenceTo>
    <relationshipLabel>Alternative Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>