force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ProposalCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalCost__c</fullName>
    <formula>KimbleOne__ProposalUsageCost__c +  KimbleOne__ProposalExpensesCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>