force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ProposalExpensesCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalExpensesCost__c</fullName>
    <label>Proposal Expenses Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>