force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ProposalMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalMargin__c</fullName>
    <formula>IF ( NOT(KimbleOne__ContractRevenue__c = 0), KimbleOne__ProposalMarginAmount__c / KimbleOne__ContractRevenue__c, NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>