force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ProposalMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalMarginAmount__c</fullName>
    <formula>KimbleOne__ContractMarginAmount__c -  KimbleOne__ProposalCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>