force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ProposalUsageCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalUsageCost__c</fullName>
    <label>Proposal Usage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>