force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__Proposition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Proposition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Proposition</label>
    <referenceTo>KimbleOne__Proposition__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>