force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__ShortName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShortName__c</fullName>
    <label>Short Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>