force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__Summary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>