force-app/main/default/objects/KimbleOne__Proposal__c/fields/KimbleOne__WeightedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WeightedContractRevenue__c</fullName>
    <formula>IF( KimbleOne__ForecastAtDetailedLevel__c  , KimbleOne__DetailedLevelWeightedContractRevenue__c , KimbleOne__HighLevelWeightedContractRevenue__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>